# DoctorConsultation

./: pyproject.toml
src/: db.sqlite3
src/apps/doctors/: forms.py  models.py  urls.py  views.py
src/apps/doctors/templates/doctors/: registration.html
src/config/: settings.py  urls.py
